# dsan6725_final-project_Group8

./: Data_Processing.ipynb  Index_Faiss.py  Multi_agent.ipynb  prepare_chunks.py  proposal.md  pyproject.toml
data/: aws-channel.md  week-1-channel.md  week-2-channel.md  week-3-channel.md
parsed/: aws-channel.json  chunks.json  parsed_threads.json  week-1-channel.json  week-2-channel.json  week-3-channel.json
vectorstore/: index.faiss  index.pkl
