[project]
name = "final_project"
version = "0.1.0"
description = "QA_Slackbot"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.13.3",
    "colorama>=0.4.6",
    "faiss-cpu==1.9.0",
    "googlesearch-python>=1.3.0",
    "ipykernel>=6.29.5",
    "langchain-community>=0.3.17",
    "langchain-experimental>=0.3.4",
    "langchain[aws]>=0.3.18",
    "langgraph>=0.2.72",
    "langmem>=0.0.11",
    "pandas>=2.2.3",
    "pyarrow>=19.0.1",
    "pygithub>=2.6.0",
    "requests>=2.32.3",
    "sentence-transformers>=3.4.1",
    "slack-sdk>=3.34.0",
    "tabulate>=0.9.0",
    "zmq>=0.0.0",
]
